[gd_scene load_steps=6 format=3 uid="uid://cawmd4ukmn8fk"]

[ext_resource type="Texture2D" uid="uid://72koo3v8vcwp" path="res://uiassets/wasp_battle.png" id="1_dndpv"]
[ext_resource type="Script" path="res://scripts/battle_screen.gd" id="1_eadrw"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mkwoa"]
texture = ExtResource("1_dndpv")

[sub_resource type="SystemFont" id="SystemFont_byr0k"]
font_names = PackedStringArray("SourceCodeVF")
font_weight = 500
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_uyuyl"]
font_names = PackedStringArray("SourceCodeVF")
font_weight = 500
subpixel_positioning = 0

[node name="BattleScreen" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
script = ExtResource("1_eadrw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(865.695, 424.85)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_mkwoa")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_byr0k")
theme_override_font_sizes/font_size = 61
text = "Wasp Battle"
horizontal_alignment = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_uyuyl")
theme_override_font_sizes/font_size = 21
text = "Bee Army"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_uyuyl")
theme_override_font_sizes/font_size = 15
text = "Strength:"
horizontal_alignment = 1

[node name="BeeStrengthValue" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = SubResource("SystemFont_uyuyl")
theme_override_font_sizes/font_size = 25
text = "###"
horizontal_alignment = 1

[node name="BeeRoll" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = SubResource("SystemFont_uyuyl")
theme_override_font_sizes/font_size = 25
text = "Roll: Rolling..."
horizontal_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 20
text = "Outcome"
horizontal_alignment = 1
uppercase = true

[node name="Outcome" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 20
text = "..CALCULATING.."
horizontal_alignment = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 40

[node name="ExitBattle" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "CONTINUE
"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Label2" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_uyuyl")
theme_override_font_sizes/font_size = 21
text = "Wasp Army"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_uyuyl")
theme_override_font_sizes/font_size = 15
text = "Strength:"
horizontal_alignment = 1

[node name="WaspStrengthValue" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = SubResource("SystemFont_uyuyl")
theme_override_font_sizes/font_size = 25
text = "###"
horizontal_alignment = 1

[node name="WaspRoll" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = SubResource("SystemFont_uyuyl")
theme_override_font_sizes/font_size = 25
text = "Roll: Rolling..."
horizontal_alignment = 1

[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer3/ExitBattle" to="." method="_on_exit_battle_pressed"]
